# sm64_bully_movement

./: .gitignore  BullyPath.cpp  BullyPath.hpp  CMakeLists.txt  Constants.hpp  Int128.hpp  Makefile  SpeedRangeSearch.cpp  SpeedRangeSearch.hpp  Trig.cpp  Trig.hpp  main.cpp
